--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "json-server --config json-server.json db.json"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -14,7 +15,11 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "^12.1.6",
+    "normalize.css": "^8.0.1",
+    "sass": "^1.51.0"
   }
 }
