--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "serve": "concurrently \"npm run mock\" \"npm run dev\""
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "mongodb": "^4.6.0",
+    "mongoose": "^6.3.3",
     "next": "12.1.6",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
